[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]

[node name="base" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="." index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 600.0
margin_bottom = 600.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0.847059, 0.847059, 0.847059, 1 )
_sections_unfolded = [ "Hint", "Rect" ]

[node name="menu_container" type="VBoxContainer" parent="." index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 150.0
margin_top = 45.0
margin_right = 450.0
margin_bottom = 555.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 50
alignment = 1
_sections_unfolded = [ "Focus", "Hint", "custom_constants" ]

[node name="cont_button" type="Button" parent="menu_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 140.0
margin_right = 300.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CONTINUE"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="level_button" type="Button" parent="menu_container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 210.0
margin_right = 300.0
margin_bottom = 230.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "CHOOSE LEVEL"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="opt_button" type="Button" parent="menu_container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 280.0
margin_right = 300.0
margin_bottom = 300.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "OPTIONS"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="quit_button" type="Button" parent="menu_container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 350.0
margin_right = 300.0
margin_bottom = 370.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "QUIT GAME"
flat = false
align = 1
_sections_unfolded = [ "Anchor", "Margin" ]


